--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ button {
   cursor: pointer;
 }
 body {
+  min-height: 100vh;
   background-color: var(--clr-neutral-300);
 }
 header {
@@ -36,11 +37,12 @@ header {
   box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.4);
   align-items: center;
   margin-bottom: 40px;
-  div {
-    background-color: var(--clr-neutral-400);
+  .toggle-btn-bgdiv {
+    background-color: var(--clr-neutral-200);
     padding: 8px;
     border-radius: 8px;
     display: flex;
+    align-items: center;
   }
   div:hover {
     cursor: pointer;
@@ -57,35 +59,58 @@ main {
 }
 
 .btn-group button {
-  background-color: var(--clr-neutral-100);
-  border: none;
+  /* variables */
+  --bg-color: var(--clr-neutral-100);
+  --color: black;
+  --border: 1px solid var(--clr-neutral-400);
+
+  /*Properties to edit with JS */
+  background-color: var(--bg-color);
+  color: var(--color);
+  border: var(--border);
 
   margin-left: 5px;
-
   padding: 5px 15px;
   border-radius: 20px;
 }
+.btn-group button:active,
+.btn-group button:focus {
+  --bg-color-hover: var(--clr-red-500);
+  background-color: var(--bg-color-hover);
+}
 .extensions {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+
   gap: 2rem;
 }
 .extension {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
+
   background-color: var(--clr-neutral-100);
   border-radius: 8px;
   padding: 10px;
 }
+
 .extension-info {
   display: flex;
-  margin-bottom: 30px;
+
+  margin-bottom: 10px;
   gap: 1rem;
   img {
     width: 40px;
   }
-  align-items: flex-start;
+}
+.extension-info-text {
+  display: grid;
+  gap: 0.5rem;
 }
 .extension-btns {
   display: flex;
+
   align-items: center;
   justify-content: space-between;
 }
@@ -97,6 +122,7 @@ main {
   padding: 5px 15px;
   border-radius: 16px;
 }
+
 /* The switch - the box around the slider */
 .switch {
   position: relative;
